--- a/src/page.pug
+++ b/src/page.pug
@@ -23,7 +23,7 @@ block styles
 //- scripts
 
 block scripts
-	script.
+	//- script.
 		//- head scripts
 		// preloader
 		//- window.onload = function() {
